Changed file parsing to allow Windows file path with \ and windows remote file paths starting with \\.